--- a/css/style.css
+++ b/css/style.css
@@ -1,66 +1,41 @@
-body {
-    background-color: #333;
+#body {
+    width: 100%;
+    height: 100vh; 
+    overflow: hidden; 
 }
 
-.fila {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+#anim {
+    width: 100%;
+    height: 100vh;
+    background-image: url('../images/background.png'); 
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    overflow: hidden;
 }
 
-.fila2{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#mensajes {
+    width: 20vw;
+    height: 12vh;
+    background-image: url('../images/mensaje.png'); 
+    background-size: cover;
+    background-position: top;
+    position: relative;
+    top: 40%;
+    left: 40%;
+    overflow: hidden;
+    z-index: 1;
+    transition: background-position 4s ease-in-out, opacity 0.3s ease-in 4.1s;
+    
 }
 
-.caja1 {
-    display: flex;
-    width: 550px;
-    height: 250px;
-    background-color: aqua;
-    text-align: center;
-    align-content: center;
-    margin: 40px;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.caja2 {
-    display: flex;
-    width: 550px;
-    height: 250px;
-    background-color: aqua;
-    margin: 40px;
-    justify-content: left;
-    align-items: end;
-}
-
-.caja3 {
-    display: flex;
-    width: 550px;
-    height: 250px;
-    background-color: aqua;
-    margin: 40px;
-    justify-content: left;
-    align-items: end;
-}
-
-.caja4 {
-    display: flex;
-    width: 550px;
-    height: 250px;
-    background-color: aqua;
-    margin: 40px;
-    justify-content: space-between;
-    align-items: flex-start;
-} 
-
-.subcaja {
-    background-color: blue;
-    width: 100px;
-    height: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#mensajes:hover{
+    background-position-y: -55px; 
+    opacity: 0%; 
+    background-position-y: -110px;
+    opacity: 0; 
+    background-position-y: -150px;  
+    opacity: 0; 
+    background-position-y: -199px; 
+    opacity: 0; 
 }
